# aws-cdk-hello-rust

./: Cargo.toml  README.md  testfile.txt
src/: main.rs
