[package]
name = "aws-cdk-hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
aws-config = "0.51.0"
aws-types = "0.51.0"
aws-sdk-s3 = "0.21.0"
